updated new file

--- a/contact.html
+++ b/contact.html
@@ -222,7 +222,7 @@
                       <li class="active"><a href="index.html">Home</a></li>
                       <li><a href="about.html">About Conference</a></li>
                       <li><a href="team.html"> Speakers</a></li>
-                      <li><a href="team.html"> Committees</a></li>
+                      <li><a href="committe.html"> Committees</a></li>
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
@@ -244,7 +244,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="team.html">APME</a></li>
+                      <li><a href="apme.html">APME</a></li>
 
                       <li><a href="#">Broucher</a></li>
 
@@ -265,7 +265,7 @@
                     href="e-poster.html"
                   >
                     <span class="mr10 td-text d-inline-block mr-5"
-                      >e-Poster</span
+                      >Guidelines</span
                     >
                   </a>
                 </div>
@@ -482,6 +482,90 @@
                 <h3
                   class="td-contact-info-title mb-15 text-decoration-underline"
                 >
+                  Travel & Accomodation
+                </h3>
+
+                <div class="td-contact-info-list">
+                  <ul>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.Potti Rajesh</p>
+                        <p>+91 9441242498</p>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.Kavuri Suchitra</p>
+                        <p>+91 9490857145</p>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.P.Sravya</p>
+                        <p>+91 9966822662</p>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.P.Jyothi</p>
+                        <p>+91 9440501905</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <div class="td-contact-info grey-bg mb-40">
+                <h3
+                  class="td-contact-info-title mb-15 text-decoration-underline"
+                >
+                  Paper & Poster Presentation
+                </h3>
+
+                <div class="td-contact-info-list">
+                  <ul>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.N.Partha Sarathi</p>
+                        <p>+91 9440014025</p>
+                      </div>
+                    </li>
+                    <li>
+                      <span class="icons"
+                        ><i class="flaticon-phone fs-5"></i
+                      ></span>
+                      <div class="address">
+                        <p class="mb-0">Dr.P.Sai Kiran Santosh</p>
+                        <p>+91 8074939372</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4">
+              <div class="td-contact-info grey-bg mb-40">
+                <h3
+                  class="td-contact-info-title mb-15 text-decoration-underline"
+                >
                   Registration Committee
                 </h3>
 
@@ -492,8 +576,8 @@
                         ><i class="flaticon-phone fs-5"></i
                       ></span>
                       <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
+                        <p class="mb-0">Dr.U.Vijay Kumar</p>
+                        <p>+91 9398432153</p>
                       </div>
                     </li>
                     <li>
@@ -501,128 +585,8 @@
                         ><i class="flaticon-phone fs-5"></i
                       ></span>
                       <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4">
-              <div class="td-contact-info grey-bg mb-40">
-                <h3
-                  class="td-contact-info-title mb-15 text-decoration-underline"
-                >
-                  Conference Committee
-                </h3>
-
-                <div class="td-contact-info-list">
-                  <ul>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4">
-              <div class="td-contact-info grey-bg mb-40">
-                <h3
-                  class="td-contact-info-title mb-15 text-decoration-underline"
-                >
-                  Accommodation Committee
-                </h3>
-
-                <div class="td-contact-info-list">
-                  <ul>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
-                      </div>
-                    </li>
-                    <li>
-                      <span class="icons"
-                        ><i class="flaticon-phone fs-5"></i
-                      ></span>
-                      <div class="address">
-                        <p class="mb-0">Person Name</p>
-                        <p>+91 8790084698</p>
+                        <p class="mb-0">Dr.Y.Rajasekhar</p>
+                        <p>+91 9494240721</p>
                       </div>
                     </li>
                   </ul>
