--- a/e-poster.html
+++ b/e-poster.html
@@ -222,7 +222,7 @@
                       <li class="active"><a href="index.html">Home</a></li>
                       <li><a href="about.html">About Conference</a></li>
                       <li><a href="team.html"> Speakers</a></li>
-                      <li><a href="team.html"> Committees</a></li>
+                      <li><a href="committe.html"> Committees</a></li>
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
@@ -244,7 +244,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="team.html">APME</a></li>
+                      <li><a href="apme.html">APME</a></li>
 
                       <li><a href="#">Broucher</a></li>
 
@@ -265,7 +265,7 @@
                     href="e-poster.html"
                   >
                     <span class="mr10 td-text d-inline-block mr-5"
-                      >e-Poster</span
+                      >Guidelines</span
                     >
                   </a>
                 </div>
@@ -486,22 +486,28 @@
             >
               <span class="td-section-subtitle td-section-subtitle-2 mb-30"
                 ><a
-                  href="https://erauniversity.in/NCHPE-2024/public/assets/Guidelines%20for%20e-Poster%20Preparation,%20Submission%20and%20Presentation.pdf"
+                  href="http://atomicityit.com/demos/asram/uploads/GUIDELINES FOR ABSTRACT SUBMISSION - APMEDICON' 2025.pdf"
                 >
-                  Guidelines for e-Poster Preparation, Submission and
-                  Presentation
+                  GUIDELINES FOR ABSTRACT SUBMISSION - APMEDICON' 2025
                 </a></span
               >
               <span class="td-section-subtitle td-section-subtitle-2 mb-30"
                 ><a
-                  href="https://erauniversity.in/NCHPE-2024/public/assets/NCHPE%2024%20_36x48.pdf"
-                  >Scientific Poster Template</a
+                  href="http://atomicityit.com/demos/asram/uploads/GUIDELINES FOR INNOVATION IN MEDICAL EDUCATION PAPER - APMEDUCON' 2025.pdf"
+                  >GUIDELINES FOR INNOVATION IN MEDICAL EDUCATION PAPER -
+                  APMEDUCON' 2025</a
                 ></span
               >
               <span class="td-section-subtitle td-section-subtitle-2 mb-30"
                 ><a
-                  href="https://erauniversity.in/NCHPE-2024/public/assets/Score%20Criteria%20for%20e-Poster%20and%20Presentation%20Evaluation.pdf"
-                  >Score Criteria for e-Poster and Presentation Evaluation</a
+                  href="http://atomicityit.com/demos/asram/uploads/GUIDELINES FOR ORAL PAPER PRESENTATION - APMEDUCON' 2025.pdf"
+                  >GUIDELINES FOR ORAL PAPER PRESENTATION - APMEDUCON' 2025</a
+                ></span
+              >
+              <span class="td-section-subtitle td-section-subtitle-2 mb-30"
+                ><a
+                  href="http://atomicityit.com/demos/asram/uploads/GUIDELINES FOR E-POSTER PRESENTATION - APMEDUCON' 2025.pdf"
+                  >GUIDELINES FOR E-POSTER PRESENTATION - APMEDUCON' 2025</a
                 ></span
               >
             </div>
