--- a/poster-presentation.html
+++ b/poster-presentation.html
@@ -225,7 +225,7 @@
                       <li class="active"><a href="index.html">Home</a></li>
                       <li><a href="about.html">About Conference</a></li>
                       <li><a href="team.html"> Speakers</a></li>
-                      <li><a href="team.html"> Committees</a></li>
+                      <li><a href="committe.html"> Committees</a></li>
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
@@ -241,7 +241,7 @@
                         </ul>
                       </li>
 
-                       <li><a href="team.html">APME</a></li>
+                       <li><a href="apme.html">APME</a></li>
 
                       <li><a href="#">Broucher</a></li>
 
@@ -262,7 +262,7 @@
                     href="e-poster.html"
                   >
                     <span class="mr10 td-text d-inline-block mr-5"
-                      >e-Poster</span
+                      >Guidelines</span
                     >
                   </a>
                 </div>
