--- a/about.html
+++ b/about.html
@@ -222,7 +222,7 @@
                       <li class="active"><a href="index.html">Home</a></li>
                       <li><a href="about.html">About Conference</a></li>
                       <li><a href="team.html"> Speakers</a></li>
-                      <li><a href="team.html"> Committees</a></li>
+                      <li><a href="committe.html"> Committees</a></li>
                       <li class="menu-item-has-children">
                         <a href="">Event</a>
                         <ul class="sub-menu">
@@ -244,7 +244,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="team.html">APME</a></li>
+                      <li><a href="apme.html">APME</a></li>
 
                       <li><a href="#">Broucher</a></li>
 
@@ -265,7 +265,7 @@
                     href="e-poster.html"
                   >
                     <span class="mr10 td-text d-inline-block mr-5"
-                      >e-Poster</span
+                      >Guidelines</span
                     >
                   </a>
                 </div>
@@ -483,16 +483,16 @@
                 <div class="row align-items-end">
                   <div class="col-lg-7 col-md-7 col-sm-7">
                     <div class="td-about-4-thumb mb-25">
-                      <img
+                      <!-- <img
                         class="w-100 thumb wow td-animetion-left"
                         data-wow-duration="1.5s"
                         data-wow-delay="0.2s"
                         src="assets/img/about/about-details/thumb.jpg"
                         alt=""
-                      />
+                      /> -->
                     </div>
                   </div>
-                  <div class="col-lg-5 col-md-5 col-sm-5">
+                  <!-- <div class="col-lg-5 col-md-5 col-sm-5">
                     <div class="td-about-4-thumb text-center mb-25">
                       <img
                         class="mb-25 tdtranslateX2"
@@ -507,7 +507,7 @@
                         alt=""
                       />
                     </div>
-                  </div>
+                  </div> -->
                   <div class="col-lg-12">
                     <div
                       class="td-about-4-thumb-2 p-relative text-center pb-40 mb-25 pl-70 mr-70"
@@ -521,7 +521,7 @@
                         class="w-100 thumb wow td-animetion-top"
                         data-wow-duration="1.5s"
                         data-wow-delay="0.2s"
-                        src="assets/img/about/about-details/thumb-2.jpg"
+                        src="assets/img/about/about-details/about.png"
                         alt=""
                       />
                     </div>
@@ -540,18 +540,14 @@
                   >About This Event</span
                 >
                 <h2 class="td-section-title mb-15">
-                  About AP MEDCON 2025 - Shaping the Future of Healthcare
+                  The Power of Education: <br />
+                  Shaping Minds, Changing Future
                 </h2>
                 <p class="para para-2 mb-30">
-                  Welcome to AP MEDCON 2025, the premier medical conference
-                  hosted by ASRAM Hospital, dedicated to advancing healthcare
-                  through innovation, knowledge-sharing, and collaboration. This
-                  landmark event brings together leading medical professionals,
-                  researchers, and healthcare innovators to explore the latest
-                  advancements, address industry challenges, and inspire
-                  excellence in patient care. .
+                  Education is the cornerstone of progress, the catalyst for
+                  innovation, and the key to unlocking human potential.
                 </p>
-                <div class="td-about-3-clients d-flex flex-wrap">
+                <!-- <div class="td-about-3-clients d-flex flex-wrap">
                   <div class="mb-15 items mr-40 d-flex align-items-center">
                     <span class="mb-10 mr-15 icon">
                       <i class="flaticon-meeting"></i>
@@ -570,13 +566,16 @@
                       medical technology
                     </h5>
                   </div>
-                </div>
+                </div> -->
                 <p class="para mb-40">
-                  With engaging keynote sessions, interactive panel discussions,
-                  and valuable networking opportunities, AP MEDCON 2025 serves
-                  as a dynamic platform for driving impactful change in the
-                  healthcare sector. Join us as we come together to shape the
-                  future of medicine, one conversation at a time
+                  In the APMEDUCON 2025, we will explore the transformative
+                  impact of education on individuals and societies, the evolving
+                  role of educators in a rapidly changing world, and the urgent
+                  need to foster critical thinking, creativity, and resilience
+                  in students. Through compelling insights and real-world
+                  examples, we will reaffirm the responsibility of educators,
+                  policymakers, and communities in creating inclusive, dynamic,
+                  and future-ready learning environments.
                 </p>
                 <div class="td-about-3-btn d-flex align-items-center">
                   <a
