--- a/events.html
+++ b/events.html
@@ -226,7 +226,7 @@
                         <a href="">Event</a>
                         <ul class="sub-menu">
                           <li><a href="team.html"> Speakers</a></li>
-                          <li><a href="team.html"> Committees</a></li>
+                          <li><a href="committe.html"> Committees</a></li>
                           <li><a href="accomodation.html">Accomodation</a></li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li><a href="team.html">Poster Presentation</a></li>
@@ -236,7 +236,7 @@
                         </ul>
                       </li>
 
-                      <li><a href="team.html">APME</a></li>
+                      <li><a href="apme.html">APME</a></li>
 
                       <li><a href="#">Broucher</a></li>
 
@@ -257,7 +257,7 @@
                     href="e-poster.html"
                   >
                     <span class="mr10 td-text d-inline-block mr-5"
-                      >e-Poster</span
+                      >Guidelines</span
                     >
                   </a>
                 </div>
