--- a/about-copy.html
+++ b/about-copy.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Evente - Conference and Event HTML Template</title>
-    <meta
-      name="description"
-      content="Evente - Conference and Event HTML Template"
-    />
+    <title>APMEDUCON 2025</title>
+    <meta name="description" content="APMEDUCON 2025 " />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/apemeicon-white.png"
     />
     <!-- Place favicon.ico in the root directory -->
 
@@ -834,7 +831,7 @@
               >
                 <span
                   class="td-section-subtitle td-section-subtitle-2 td-section-subtitle-3 mb-25"
-                  >Learn From Spekaers</span
+                  > Spekaers</span
                 >
                 <h2 class="td-section-title">
                   Our Amazing & learned event Speakrs
