--- a/register.html
+++ b/register.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Evente - Conference and Event HTML Template</title>
-    <meta
-      name="description"
-      content="Evente - Conference and Event HTML Template"
-    />
+    <title>APMEDUCON 2025</title>
+    <meta name="description" content="APMEDUCON 2025 " />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/logo/favicon.png"
+      href="assets/img/logo/apemeicon-white.png"
     />
     <!-- Place favicon.ico in the root directory -->
 
@@ -46,154 +43,6 @@
       <i class="fa-sharp fa-regular fa-arrow-up"></i>
     </button>
     <!-- Scroll-top-end-->
-
-    <!-- header-search -->
-    <div class="search__popup">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="search__wrapper">
-              <div class="search__close">
-                <button type="button" class="search-close-btn">
-                  <svg
-                    width="18"
-                    height="18"
-                    viewBox="0 0 18 18"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M17 1L1 17"
-                      stroke="currentColor"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    ></path>
-                    <path
-                      d="M1 1L17 17"
-                      stroke="currentColor"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    ></path>
-                  </svg>
-                </button>
-              </div>
-              <div class="search__form">
-                <form action="#">
-                  <div class="search__input">
-                    <input
-                      class="search-input-field"
-                      type="text"
-                      placeholder="Type keywords here"
-                    />
-                    <span class="search-focus-border"></span>
-                    <button type="submit">
-                      <svg
-                        width="20"
-                        height="20"
-                        viewBox="0 0 20 20"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M9.55 18.1C14.272 18.1 18.1 14.272 18.1 9.55C18.1 4.82797 14.272 1 9.55 1C4.82797 1 1 4.82797 1 9.55C1 14.272 4.82797 18.1 9.55 18.1Z"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        ></path>
-                        <path
-                          d="M19.0002 19.0002L17.2002 17.2002"
-                          stroke="currentColor"
-                          stroke-width="1.5"
-                          stroke-linecap="round"
-                          stroke-linejoin="round"
-                        ></path>
-                      </svg>
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="search-popup-overlay"></div>
-    <!-- header-search-end -->
-
-    <!-- cart mini area start -->
-    <div class="cartmini__area">
-      <div class="cartmini__wrapper d-flex justify-content-between flex-column">
-        <div class="cartmini__top-wrapper">
-          <div class="cartmini__top p-relative">
-            <div class="cartmini__title">
-              <h4>Your cart</h4>
-            </div>
-            <div class="cartmini__close">
-              <button
-                type="button"
-                class="cartmini__close-btn cartmini-close-btn"
-              >
-                <i class="fal fa-times"></i>
-              </button>
-            </div>
-          </div>
-          <div class="cartmini__widget">
-            <div class="cartmini__widget-item">
-              <div class="cartmini__thumb">
-                <a href="product-details.html">
-                  <img src="assets/img/shop/sm-product-1.jpg" alt="" />
-                </a>
-              </div>
-              <div class="cartmini__content">
-                <h5><a href="product-details.html">Colmi Smart Wathc</a></h5>
-                <div class="cartmini__price-wrapper">
-                  <span class="cartmini__price">$36.00</span>
-                </div>
-              </div>
-              <button class="cartmini__del">
-                <i class="fal fa-times"></i>
-              </button>
-            </div>
-            <div class="cartmini__widget-item">
-              <div class="cartmini__thumb">
-                <a href="product-details.html">
-                  <img src="assets/img/shop/sm-product-2.jpg" alt="" />
-                </a>
-              </div>
-              <div class="cartmini__content">
-                <h5><a href="product-details.html">Apple Air Pods</a></h5>
-                <div class="cartmini__price-wrapper">
-                  <span class="cartmini__price">$28.00</span>
-                </div>
-              </div>
-              <button class="cartmini__del">
-                <i class="fal fa-times"></i>
-              </button>
-            </div>
-          </div>
-          <!-- for wp -->
-        </div>
-        <div class="cartmini__checkout">
-          <div class="cartmini__checkout-title mb-30">
-            <h4>Subtotal:</h4>
-            <span>$113.00</span>
-          </div>
-          <div class="cartmini__checkout-btn">
-            <a href="#" class="cartmini-btn mb-10 w-100">
-              <span></span> view cart</a
-            >
-            <a href="#" class="cartmini-btn-border w-100">
-              <span></span> checkout</a
-            >
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="body-overlay"></div>
-    <!-- cart mini area end -->
 
     <!-- header-area -->
     <header class="td-header-height">
@@ -2219,16 +2068,9 @@
                   /></a>
                 </div>
                 <p class="text mb-10">
-                  Eluru, Eluru District - 534005 AP, India
+                  ASRAM MEDICAL COLLEGE, Eluru, Eluru District - 534005 AP, India
                 </p>
-                <a
-                  class="number mb-10 d-inline-block"
-                  href="tel:+123(55)90067990"
-                  >+91 8812 - 288288, <br />288299, 288499</a
-                >
-                <a class="email" href="mailto:asrams@yahoo.com"
-                  >asrams@yahoo.com</a
-                >
+               
               </div>
             </div>
             <div class="col-lg-5 col-md-7">
@@ -2239,19 +2081,22 @@
                     <div class="td-footer-links">
                       <ul>
                         <li><a href="about.html">About this Event</a></li>
-                        <li><a href="team.html">Committees</a></li>
+                        <li><a href="committe.html">Committees</a></li>
                         <li><a href="team.html">Speakers</a></li>
                         <li><a href="sightseeing.html">Sightseeing</a></li>
+                               <li><a href="apme.html">APME</a></li>
                       </ul>
                     </div>
                   </div>
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
+                        
                         <li><a href="accomodation.html">Accomodation</a></li>
-                        <li><a href="e-poster.html">Poster Presentation</a></li>
-                        <li><a href="e-poster.html">Paper Publications</a></li>
+                        <li><a href="poster-presentation.html">Poster Presentation</a></li>
+                        <li><a href="paper-publication.html">Paper Publications</a></li>
                         <li><a href="register.html">Register</a></li>
+                               <li><a href="contact.html">Contact</a></li>
                       </ul>
                     </div>
                   </div>
@@ -2260,12 +2105,24 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="td-footer-widget td-footer-subscribe mb-40">
-                <h3 class="td-footer-title mb-20">Quick links</h3>
+                <h3 class="td-footer-title mb-20">Contact Us</h3>
                 <p class="text mb-0">
-                  AP MEDCON 2025 - Shaping the Future of Healthcare Welcome to
-                  AP MEDCON 2025, the premier medical conference hosted by ASRAM
-                  Hospital
+            For Academic Queries
                 </p>
+                 <a
+                  class="number mb-10 d-inline-block"
+                  href="tel:+123(55)90067990"
+                  >Dr.U. Vivekanand  <br>7672033194</a
+                >
+                 <p class="text mb-0">
+            For Travel & Accommodation
+                </p>
+                 <a
+                  class="number mb-10 d-inline-block"
+                  href="tel:+123(55)90067990"
+                  >Dr.Suchitra Kavuri  <br>9490857145</a
+                >
+                <a class="email" href="mailto:asrams@yahoo.com">asramsapmeducon25@gmail.com</a>
               </div>
             </div>
           </div>
@@ -2280,12 +2137,7 @@
                   </div>
                   <div class="col-md-4">
                     <div class="td-footer-bottom-copyright mb-30">
-                      <p>
-                        Design & Developed by
-                        <a class="atomicity" href="https://atomicityit.com/"
-                          >Atomicity</a
-                        >.
-                      </p>
+                      <p>Design & Developed by <a class="atomicity" href="https://atomicityit.com/">Atomicity IT & Marketing</a>.</p>
                     </div>
                   </div>
                   <div class="col-md-3">
