updated all pages

--- a/team.html
+++ b/team.html
@@ -98,13 +98,13 @@
                 <div class="logo">
                   <a class="logo-1 logo-sticky-none" href="index.html"
                     ><img
-                      data-width="150"
+                      data-width="110"
                       src="assets/img/logo/logo-white.png"
                       alt="Logo"
                   /></a>
                   <a class="logo-2 d-none" href="index.html"
                     ><img
-                      data-width="150"
+                      data-width="110"
                       src="assets/img/logo/logo-black.png"
                       alt="Logo"
                   /></a>
@@ -523,7 +523,7 @@
                           </a>
                         </h3>
                         <span class="td-team-member-position"
-                          >Dr. K. Anjireddy Oration</span
+                          >Dr. K. Anji Reddy Oration</span
                         >
                       </div>
                       <div class="td-team-thumb text-center">
@@ -551,7 +551,7 @@
                           </a>
                         </h3>
                         <span class="td-team-member-position"
-                          >Sri. G. RangaRaju Oration</span
+                          >Sri. G. Ranga Raju Oration</span
                         >
                       </div>
                       <div class="td-team-thumb text-center">
